[gd_scene load_steps=5 format=3 uid="uid://fk7torkrtd4v"]

[ext_resource type="Script" uid="uid://daf7d23or5vf6" path="res://objects/UI/new_catchable_notification_v2.gd" id="1_cu802"]
[ext_resource type="Texture2D" uid="uid://bu8l0k82mtflf" path="res://sprites/star.png" id="1_lt2in"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="2_d0bho"]
[ext_resource type="Texture2D" uid="uid://cra6bwu35rah3" path="res://sprites/Catchables/Fishes/octopus.png" id="2_yqrh1"]

[node name="NewCatchableNotificationV2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_cu802")

[node name="CenterContainer3" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -27.5
offset_right = 80.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RichTextLabel" type="Label" parent="CenterContainer3"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.866667)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Octopus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CenterContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="Background_black" type="Sprite2D" parent="CenterContainer2/Panel"]
scale = Vector2(0.11, 0.11)
texture = ExtResource("2_d0bho")

[node name="StaryBackground" type="Sprite2D" parent="CenterContainer2/Panel"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_lt2in")

[node name="TextureRect" type="TextureRect" parent="CenterContainer2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_yqrh1")
expand_mode = 3
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]
